welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:30: error: not found: value faireMotif
 		faireMotif()}}
                ^